# tmg-bot

./: .gitignore  README.md  custom_config.yml  pyproject.toml  temp.dvi  temp.tex
the_math_guys_bot/: __main__.py
the_math_guys_bot/ai/: generate_diagram.py  handle_message.py
the_math_guys_bot/cogs/: ai.py  diagram.py  helpers.py  inactive_kick.py  on_ready.py
the_math_guys_bot/utils/: get_images_from_message.py
