[tool.poetry]
name = "the-math-guys-bot"
version = "0.1.0"
description = ""
authors = ["MathItYT <benjamin.ubilla@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
py-cord = {extras = ["voice"], version = "^2.6.1"}
openai = "^1.57.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
the-math-guys-bot = "the_math_guys_bot.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
